--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@
 [Bb]uild/
 [Bb]uilds/
 [Ll]ogs/
+/[Mm]emoryCaptures/
+/[Oo]utput/
+/[Uu]serSettings/
+/[Pp]ackages/
+/[Pp]rojectSettings/
+
+# Never ignore Asset meta data
+!/[Aa]ssets/**/*.meta
+
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
@@ -31,6 +40,7 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
+*.vsconfig
 
 # Unity3D generated meta files
 *.pidb.meta
